--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
-  "name": "magium/configuration-manager",
+  "name": "magium/new-configuration-manager",
+  "replace": {
+    "magium/configuration-manager": "*"
+  },
   "description": "Provides a generic plugable configuration management interface similar to Magento",
   "minimum-stability": "stable",
   "license": "Apache-2.0",
@@ -31,7 +34,7 @@
   "require": {
     "zendframework/zend-cache": "^2.0",
     "psr/container": "^1",
-    "symfony/console": "~2.3|~3.0|^4.0",
+    "symfony/console": "^5.0",
     "psr/http-message": "^1.0"
   },
   "suggest": {
